# rustfmt

./: .editorconfig  .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  Cargo.toml  Cargo.toml~  Configurations.md  Contributing.md  LICENSE-APACHE  Makefile.toml  Processes.md  Progress.md  README.md  Subtree sync procedure.md  appveyor.yml  atom.md  bootstrap.sh  build.rs  foo.rs  index.html  rust-toolchain  rustfmt.toml  triagebot.toml
.cargo/: Makefile.toml  config
.github/: FUNDING.yml
check_diff/: Cargo.toml
check_diff/src/: git.rs  lib.rs  main.rs  structs.rs
check_diff/tests/: bash_commands.rs  check_diff.rs  diffy.rs  git.rs
check_diff/tests/common/: mod.rs
ci/: build_and_test.bat  build_and_test.rs  build_and_test.sh  check_diff.rs  check_diff.sh  integration.rs  integration.sh  main.rs  subtree_sync.sh
config_proc_macro/: .gitignore  Cargo.toml  Makefile.toml
docs/: index.html
markdown/: Cargo.toml  build.rs  rustfmt.toml
markdown/src/: escape.rs  formatter.rs  lib.rs  links.rs  list.rs  table.rs  utils.rs
markdown/tests/: commonmark_v0_30_spec.rs  gfm_spec.rs
markdown/tests/common/: mod.rs
markdown/tests/spec/: commonmark_v0_30_spec.json  gfm_spec.json
rustfmt-config/: Cargo.toml
rustfmt-core/: Cargo.toml  Makefile.toml
rustfmt-core/rustfmt-bin/: Cargo.toml  build.rs
rustfmt-core/rustfmt-bin/src/cargo-fmt/: main.rs
rustfmt-core/rustfmt-bin/src/format-diff/: main.rs
rustfmt-core/rustfmt-bin/src/git-rustfmt/: main.rs
rustfmt-core/rustfmt-bin/tests/cargo-fmt/: main.rs
rustfmt-core/rustfmt-bin/tests/nested-test-files/empty-tests-dir/: Cargo.toml
rustfmt-core/rustfmt-bin/tests/nested-test-files/no-tests-dir/: Cargo.toml
rustfmt-core/rustfmt-bin/tests/rustfmt/: main.rs
rustfmt-core/rustfmt-bin/tests/source/: issue-3981.rs
rustfmt-core/rustfmt-config/: Cargo.toml
rustfmt-core/rustfmt-config/config_proc_macro/src/: item_enum.rs
rustfmt-core/rustfmt-config/config_proc_macro/tests/: smoke.rs
rustfmt-core/rustfmt-config/src/: config_type.rs  file_lines.rs  lib.rs  options.rs
rustfmt-core/rustfmt-emitter/: Cargo.toml
rustfmt-core/rustfmt-emitter/src/: diff.rs  files.rs  lib.rs  rustfmt_diff.rs
rustfmt-core/rustfmt-lib/: Cargo.toml
rustfmt-core/rustfmt-lib/config_proc_macro/: Cargo.toml
rustfmt-core/rustfmt-lib/config_proc_macro/src/: item_enum.rs
rustfmt-core/rustfmt-lib/config_proc_macro/tests/: smoke.rs
rustfmt-core/rustfmt-lib/src/: attr.rs  chains.rs  closures.rs  comment.rs  config.rs  emitter.rs  expr.rs  format_report_formatter.rs  formatting.rs  ignore_path.rs  imports.rs  items.rs  lib.rs  lists.rs  macros.rs  matches.rs  missed_spans.rs  modules.rs  overflow.rs  pairs.rs  patterns.rs  reorder.rs  result.rs  rewrite.rs  skip.rs  source_file.rs  spanned.rs  stmt.rs  string.rs  types.rs  utils.rs  vertical.rs  visitor.rs
rustfmt-core/rustfmt-lib/src/config/: config_type.rs  file_lines.rs  options.rs
rustfmt-core/rustfmt-lib/src/emitter/: checkstyle.rs  diff.rs  files.rs  json.rs  modified_lines.rs  rustfmt_diff.rs  stdout.rs
rustfmt-core/rustfmt-lib/src/formatting/: attr.rs  chains.rs  closures.rs  comment.rs  expr.rs  imports.rs  items.rs  lists.rs  macros.rs  matches.rs  missed_spans.rs  modules.rs  overflow.rs  pairs.rs  patterns.rs  report.rs  source_map.rs  spanned.rs  stmt.rs  string.rs  types.rs  util.rs  utils.rs  vertical.rs  visitor.rs
rustfmt-core/rustfmt-lib/src/formatting/modules/: visitor.rs
rustfmt-core/rustfmt-lib/src/formatting/syntux/: parser.rs  session.rs
rustfmt-core/rustfmt-lib/src/formatting/syntux/session/: ignore_path.rs
rustfmt-core/rustfmt-lib/src/modules/: visitor.rs
rustfmt-core/rustfmt-lib/src/syntux/: parser.rs  session.rs
rustfmt-core/rustfmt-lib/src/test/: configuration_snippet.rs  mod.rs
rustfmt-core/rustfmt-lib/tests/parser/issue-4126/: lib.rs
rustfmt-core/rustfmt-lib/tests/source/: closure_block_style_no_comma.rs  expr.rs  imports-reorder-lines.rs  imports-reorder.rs  imports.rs  imports_2015_edition.rs  imports_raw_identifiers.rs  issue-2863.rs  issue-3550.rs  issue-3908.rs  issue-3949.rs  issue-3988.rs  issue-4050.rs  issue-4099.rs  issue-4158.rs  issue-4211.rs  macros.rs  match.rs  structs.rs
rustfmt-core/rustfmt-lib/tests/source/cfg_if/: lib.rs
rustfmt-core/rustfmt-lib/tests/source/cfg_if/detect/arch/: arm.rs  x86.rs
rustfmt-core/rustfmt-lib/tests/source/configs/fn_params_layout/: compressed.rs
rustfmt-core/rustfmt-lib/tests/source/configs/space_around_attr_eq/: false.rs
rustfmt-core/rustfmt-lib/tests/source/configs/use_try_shorthand/: true_2015_edition.rs
rustfmt-core/rustfmt-lib/tests/source/configs/width_heuristics/: max.rs
rustfmt-core/rustfmt-lib/tests/source/issue-3933/: lib.rs
rustfmt-core/rustfmt-lib/tests/source/mods-relative-paths/: mod_b.rs
rustfmt-core/src/: chains.rs  checkstyle.rs  closures.rs  codemap.rs  comment.rs  emitter.rs  expr.rs  filemap.rs  imports.rs  items.rs  lib.rs  lists.rs  macros.rs  missed_spans.rs  modules.rs  patterns.rs  reorder.rs  rewrite.rs  rustfmt_diff.rs  shape.rs  source_file.rs  spanned.rs  string.rs  types.rs  utils.rs  vertical.rs  visitor.rs
rustfmt-core/src/attr/: doc_comment.rs
rustfmt-core/src/config/: file_lines.rs
rustfmt-core/src/test/: configuration_snippet.rs  mod.rs
rustfmt-core/tests/: lib.rs
rustfmt-core/tests/source/: chains.rs  imports.rs  issue-2445.rs  max-chains.rs
rustfmt-core/tests/source/configs/merge_imports/: false.rs  true.rs
rustfmt-core/tests/source/issue-3933/: imp-a.rs
rustfmt-emitter/: Cargo.toml
rustfmt-lib/: Cargo.toml
rustfmt-lib/rustfmt-core/: Cargo.toml
rustfmt-lib/rustfmt-core/src/: lib.rs  matches.rs  pairs.rs
rustfmt-lib/rustfmt-core/src/test/: configuration_snippet.rs  mod.rs
rustfmt-lib/rustfmt-core/tests/source/: trait.rs
rustfmt-lib/rustfmt-emitter/: Cargo.toml
rustfmt-lib/rustfmt-emitter/src/: checkstyle.rs  diff.rs  modified_lines.rs  rustfmt_diff.rs  stdout.rs
tests/source/cargo-toml/1/: Cargo.toml
tests/source/cargo-toml/false/: Cargo.toml
tests/source/cargo-toml/true/virtual-manifest/: Cargo.toml
(+973 files in other folders)
