[package]
name = "rustfmt-nightly"
version = "1.5.1"
build = "build.rs"
categories = ["development-tools"]
edition = "2021"
license = "Apache-2.0/MIT"
readme = "README.md"
repository = "https://github.com/rust-lang/rustfmt"
description = "Tool to find and fix Rust formatting issues"

[[bin]]
name = "rustfmt"
path = "src/bin/main.rs"

[[bin]]
name = "cargo-fmt"
path = "src/cargo-fmt/main.rs"

[[bin]]
name = "rustfmt-format-diff"
path = "src/format-diff/main.rs"

[[bin]]
name = "git-rustfmt"
path = "src/git-rustfmt/main.rs"

[features]
cargo-fmt = []
default = ["cargo-fmt", "rustfmt-format-diff"]
generic-simd = ["bytecount/generic-simd"]
rustfmt-format-diff = []

[dependencies]
annotate-snippets = { version = "0.9", features = ["color"] }
anyhow = "1.0"
bytecount = "0.6"
cargo_metadata = "0.14"
clap = { version = "3.1", features = ["derive"] }
derive-new = "0.5"
diff = "0.1"
dirs = "4.0"
env_logger = "0.9"
getopts = "0.2"
ignore = "0.4"
itertools = "0.10"
lazy_static = "1.4"
log = "0.4"
regex = "1.5"
# A noop dependency that changes in the Rust repository, it's a bit of a hack.
# See the `src/tools/rustc-workspace-hack/README.md` file in `rust-lang/rust`
# for more information.
rustc-workspace-hack = "1.0.0"
rustfmt-config_proc_macro = { version = "0.3", path = "config_proc_macro" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
term = "0.7"
thiserror = "1.0"
toml = "0.5"
toml_edit = "0.13"
unicode-segmentation = "1.9"
unicode-width = "0.1"
unicode_categories = "0.1"

# Rustc dependencies are loaded from the sysroot, Cargo doesn't know about them.

[package.metadata.rust-analyzer]
# This package uses #[feature(rustc_private)]
rustc_private = true
