[package]
name = "markdown"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10"
pulldown-cmark = { version = "0.9.3", default-features = false }
unicode-width = "0.1"
unicode-segmentation = "1.9"

[features]
gen-tests = []

[build-dependencies]
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0"
