[package]

# The metadata of this crate is intentionally removed to avoid publishing this crate by accident.
name = "rustfmt-bin"
version = "2.0.0-rc.1"
edition = "2018"

[[bin]]
name = "rustfmt"
path = "src/bin/main.rs"

[[bin]]
name = "cargo-fmt"
path = "src/cargo-fmt/main.rs"

[[bin]]
name = "rustfmt-format-diff"
path = "src/format-diff/main.rs"

[[bin]]
name = "git-rustfmt"
path = "src/git-rustfmt/main.rs"

[features]
default = ["cargo-fmt", "rustfmt-format-diff"]
cargo-fmt = []
rustfmt-format-diff = []
generic-simd = ["rustfmt_lib/generic-simd"]

[dependencies]
ansi_term = "0.12"
anyhow = "1.0"
cargo_metadata = "0.9"
dunce = "1.0"
env_logger = "0.7"
getopts = "0.2"
log = "0.4"
regex = "1.0"
serde = "1.0"
serde_json = "1.0"
structopt = "0.3"
term = "0.6"
thiserror = "1.0"

rustfmt_lib = { path = "../rustfmt-lib", version = "2.0.0-rc.1" }

[dev-dependencies]
lazy_static = "1.0"
