[package]
name = "rustfmt_configuration"
version = "1.0.0"
authors = ["topecongiro <seuchida@gmail.com>"]
edition = "2018"
description = "Rustfmt configuration library"
license = "Apache-2.0/MIT"
repository = "https://github.com/rust-lang/rustfmt"

[dependencies]
ansi_term = "0.12"
dirs = "2.0"
itertools = "0.8"
regex = "1.3"
rustfmt-config_proc_macro = { version = "0.4", path = "config_proc_macro" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
toml = "0.5"

[dependencies.syntax_pos]
package = "rustc-ap-syntax_pos"
version = "610.0.0"

