[package]
name = "rustfmt_configuration"
version = "2.0.0-rc.1"
authors = ["topecongiro <seuchida@gmail.com>"]
edition = "2018"
description = "Rustfmt configuration library"
license = "Apache-2.0/MIT"
repository = "https://github.com/rust-lang/rustfmt"

[dependencies]
dirs = "2.0"
itertools = "0.8"
regex = "1.3"
rustfmt-config_proc_macro = { version = "0.4", path = "config_proc_macro" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
toml = "0.5"

[dependencies.rustc_span]
package = "rustc-ap-rustc_span"
version = "651.0.0"

