[package]
name = "rustfmt_emitter"
version = "1.0.0"
authors = ["topecongiro <seuchida@gmail.com>"]
edition = "2018"
description = "Rustfmt emitter library"
license = "Apache-2.0/MIT"
repository = "https://github.com/rust-lang/rustfmt"

[dependencies]
diff = "0.1"
rustfmt_configuration = { path = "../rustfmt-config", version = "1.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
term = "0.6"
