[package]
name = "rustfmt_lib"
version = "1.0.0"
authors = ["topecongiro <seuchida@gmail.com>"]
edition = "2018"
description = "Rustfmt as a library"
license = "Apache-2.0/MIT"
repository = "https://github.com/rust-lang/rustfmt"

[features]
generic-simd = ["bytecount/generic-simd"]

[dependencies]
annotate-snippets = { version = "0.6", features = ["ansi_term"] }
anyhow = "1.0"
bytecount = "0.6"
ignore = "0.4.11"
itertools = "0.8"
lazy_static = "1.0.0"
log = "0.4"
regex = "1.0"
rustfmt_configuration = { path = "../rustfmt-config", version = "1.0" }
rustfmt_emitter =  { path = "../rustfmt-emitter", version = "1.0" }
term = "0.6"
thiserror = "1.0"
unicode_categories = "0.1.1"
unicode-segmentation = "1.0.0"
unicode-width = "0.1.5"

[dev-dependencies]
env_logger = "0.7"

[dependencies.rustc_target]
package = "rustc-ap-rustc_target"
version = "610.0.0"

[dependencies.syntax]
package = "rustc-ap-syntax"
version = "610.0.0"

[dependencies.syntax_pos]
package = "rustc-ap-syntax_pos"
version = "610.0.0"

[dependencies.rustc_data_structures]
package = "rustc-ap-rustc_data_structures"
version = "610.0.0"

