[package]
name = "rustfmt_lib"
version = "2.0.0-rc.1"
authors = ["topecongiro <seuchida@gmail.com>"]
edition = "2018"
description = "Rustfmt as a library"
license = "Apache-2.0/MIT"
repository = "https://github.com/rust-lang/rustfmt"

[features]
generic-simd = ["bytecount/generic-simd"]

[dependencies]
annotate-snippets = { version = "0.6", features = ["ansi_term"] }
anyhow = "1.0"
bytecount = "0.6"
ignore = "0.4.11"
itertools = "0.8"
lazy_static = "1.0.0"
log = "0.4"
regex = "1.0"
rustfmt_configuration = { path = "../rustfmt-config", version = "2.0.0-rc.1" }
rustfmt_emitter =  { path = "../rustfmt-emitter", version = "2.0.0-rc.1" }
term = "0.6"
thiserror = "1.0"
unicode_categories = "0.1.1"
unicode-segmentation = "1.0.0"
unicode-width = "0.1.5"

[dev-dependencies]
env_logger = "0.7"

[dependencies.rustc_data_structures]
package = "rustc-ap-rustc_data_structures"
version = "638.0.0"

[dependencies.rustc_errors]
package = "rustc-ap-rustc_errors"
version = "638.0.0"

[dependencies.rustc_error_codes]
package = "rustc-ap-rustc_error_codes"
version = "638.0.0"

[dependencies.rustc_parse]
package = "rustc-ap-rustc_parse"
version = "638.0.0"

[dependencies.rustc_span]
package = "rustc-ap-rustc_span"
version = "638.0.0"

[dependencies.rustc_target]
package = "rustc-ap-rustc_target"
version = "638.0.0"

[dependencies.syntax]
package = "rustc-ap-syntax"
version = "638.0.0"

