[package]
name = "rustfmt_lib"
version = "2.0.0-rc.1"
authors = ["topecongiro <seuchida@gmail.com>"]
edition = "2018"
description = "Rustfmt as a library"
license = "Apache-2.0/MIT"
repository = "https://github.com/rust-lang/rustfmt"

[features]
# FIXME: Refactor so that rustfmt can be built without config or emitter.
default = ["config", "emitter"]
generic-simd = ["bytecount/generic-simd"]

config = [
  "dirs",
  "rustfmt-config_proc_macro",
  "serde",
  "serde_json",
  "toml",
]

emitter = [
  "config",
  "diff",
  "serde",
  "serde_json",
]

[dependencies]
annotate-snippets = { version = "0.6", features = ["ansi_term"] }
anyhow = "1.0"
bytecount = "0.6"
dunce = "1.0"
ignore = "0.4.11"
itertools = "0.8"
lazy_static = "1.0.0"
log = "0.4"
regex = "1.0"
term = "0.6"
thiserror = "1.0"
unicode_categories = "0.1.1"
unicode-segmentation = "1.0.0"
unicode-width = "0.1.5"

# Optional dependencies
diff = { version = "0.1", optional = true}
dirs = { version = "2.0", optional = true }
rustfmt-config_proc_macro = { version = "0.5", path = "config_proc_macro", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
toml = { version = "0.5", optional = true }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["errhandlingapi", "fileapi"] }

[dev-dependencies]
env_logger = "0.7"

[dependencies.rustc_ast]
package = "rustc-ap-rustc_ast"
version = "659.0.0"

[dependencies.rustc_ast_pretty]
package = "rustc-ap-rustc_ast_pretty"
version = "659.0.0"

[dependencies.rustc_data_structures]
package = "rustc-ap-rustc_data_structures"
version = "659.0.0"

[dependencies.rustc_errors]
package = "rustc-ap-rustc_errors"
version = "659.0.0"

[dependencies.rustc_expand]
package = "rustc-ap-rustc_expand"
version = "659.0.0"

[dependencies.rustc_parse]
package = "rustc-ap-rustc_parse"
version = "659.0.0"

[dependencies.rustc_session]
package = "rustc-ap-rustc_session"
version = "659.0.0"

[dependencies.rustc_span]
package = "rustc-ap-rustc_span"
version = "659.0.0"
