[package]
name = "rustfmt_core"
version = "1.0.0"
authors = ["topecongiro <seuchida@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
generic-simd = ["bytecount/generic-simd"]

[dependencies]
annotate-snippets = { version = "0.6", features = ["ansi_term"] }
anyhow = "1.0"
bytecount = "0.6"
ignore = { git = "https://github.com/topecongiro/ripgrep", branch = "update-crossbeam" }
itertools = "0.8"
lazy_static = "1.0.0"
log = "0.4"
regex = "1.0"
rustfmt_config = { path = "../rustfmt-config" }
rustfmt_emitter =  { path = "../rustfmt-emitter" }
term = "0.6"
thiserror = "1.0"
unicode_categories = "0.1.1"
unicode-segmentation = "1.0.0"
unicode-width = "0.1.5"

[dev-dependencies]
env_logger = "0.7"

[dependencies.rustc_target]
package = "rustc-ap-rustc_target"
version = "610.0.0"

[dependencies.syntax]
package = "rustc-ap-syntax"
version = "610.0.0"

[dependencies.syntax_pos]
package = "rustc-ap-syntax_pos"
version = "610.0.0"

[dependencies.rustc_data_structures]
package = "rustc-ap-rustc_data_structures"
version = "610.0.0"

