[package]
name = "rustfmt_emitter"
version = "1.0.0"
authors = ["topecongiro <seuchida@gmail.com>"]
edition = "2018"
description = "Rustfmt emitter library"
license = "Apache-2.0/MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diff = "0.1"
rustfmt_config = { path = "../rustfmt-config" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
term = "0.6"