

[[bin]]
        "aa" = 1
        'bb' = 2
        "啊"=1
[package]
    version = 1
    description = "a\nb\nhaha"
    name = 3

# comment 1

    arr1 = [1,
        2,3]

# comment 2

    arr2 = ["11111111111111111111111111111111111111111111111111111111111111111111111111111111","1111111111111111111111111111111111111111111111111111111111111111111111111111111"]

[dependencies]
        extremely_long_crate_name_goes_here = {path = "extremely_long_path_name_goes_right_here",version = "4.5.6"}
        crate1 = {            path = "crate1",version = "1.2.3"                   }

[[bin]]
        d = "git-rustfmt"
        c = "src/git-rustfmt/main.rs"